mise en place du système d'inscription sur le site